--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Prerana Pattnaik | AI/ML Portfolio</title>
+  <title>Prerana Kailash Pattnaik | AI/ML Portfolio</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -78,7 +78,6 @@
     }
 
     a { color: #1e88e5; text-decoration: none; }
-
     a:hover { text-decoration: underline; }
 
     footer {
@@ -113,95 +112,69 @@
 <body>
 
   <nav>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
     <a href="#projects">Projects</a>
-    <a href="#experience">Experience</a>
     <a href="#achievements">Achievements</a>
     <a href="#certifications">Certifications</a>
     <a href="#education">Education</a>
+    <a href="#contact">Contact</a>
   </nav>
 
   <header>
     <h1>👩‍💻 Prerana Kailash Pattnaik</h1>
-    <p>Contributor @ SSoC4’25 | Arcade Legend – Google Cloud (Diamond League)<br>
-    Trainee – Artificial Intelligence Track @ Infosys Springboard<br>
-    Founder – Simplified Computer Science | Aspiring AI/ML Engineer | 🎓 MCA</p>
+    <p>Contributor @ GSSoC’25 | Google Cloud Arcade Legend (Diamond League)<br>
+    MCA – Berhampur University | AI/ML Engineer in Progress<br>
+    Founder – SheCodesHerWay | Community Builder & Open-Source Contributor @ GSSoC '25</p>
   </header>
 
   <section id="about">
     <h2>💡 About Me</h2>
-    <p>Aspiring AI/ML Engineer and creative technologist passionate about simplifying complex concepts through code and content. I build AI-powered learning tools, contribute to open-source projects, and lead community initiatives for inclusive tech. Founder of Simplified Computer Science, where I blend creativity, code, and education.</p>
+    <p>AI/ML Engineer in progress with a strong foundation in <b>AI agent frameworks</b>, <b>cloud tools</b>, and <b>AI-assisted coding</b>. I am passionate about building real-world AI applications, contributing to open-source, and empowering inclusive tech communities. With an MCA background and hands-on projects in <b>AI/NLP</b>, my focus is on innovation, collaboration, and impact-driven development.</p>
   </section>
 
-  <section id="open-source">
-    <h2>🌍 Open Source & Future Aspirations</h2>
-    <p>I believe open-source contribution is the most empowering path for continuous learning, collaboration, and impact in the tech world. My goal is to become a consistent, beginner-friendly contributor to real-world AI/NLP projects on GitHub, while supporting inclusive tech communities.</p>
+  <section id="skills">
+    <h2>🛠️ Skills Summary</h2>
     <ul>
-      <li>📌 I actively contribute to developer communities like <strong>GDG</strong>, <strong>Women Techmakers</strong>, and open-source programs that promote learning by doing.</li>
-    </ul>
-  </section>
-
-  <section id="gssoc">
-    <h2>🌟 GSSoC Aspiration</h2>
-    <p>💖 <em>I sincerely wish to be a part of <strong>GirlScript Summer of Code (GSSoC)</strong> – a program that beautifully aligns with my passion for open-source AI/NLP development and inclusive tech collaboration. With hands-on experience in building tools like <strong>PalAI</strong> and <strong>SheCodesHerWay</strong>, I’m excited to contribute meaningfully to real-world projects while learning from mentors and peers.</em></p>
-
-    <h3>🛠️ Why GSSoC?</h3>
-    <ul>
-      <li>I wish to grow as a contributor in the open-source community.</li>
-      <li>I want to collaborate on beginner-friendly projects that promote learning and innovation.</li>
-      <li>I wish to give back by contributing to impactful solutions and uplifting fellow developers.</li>
-    </ul>
-
-    <p>🌈 <em>I’m preparing and contributing continuously with the hope that I’ll earn the opportunity to grow through the GSSoC journey.</em></p>
-
-    <ul>
-      <li>🌟 One of my biggest dreams is to participate in the <strong>Google Summer of Code (GSoC)</strong> and collaborate with global mentors. My goal is to contribute to impactful AI/NLP tools, improve real-world open-source projects, and become part of the global open-source ecosystem.</li>
-      <li>💡 I’m continuously building projects like <strong>PalAI</strong> and <strong>SheCodesHerWay</strong> to showcase my readiness for GSoC and contribute meaningfully as a Machine Learning Contributor.</li>
-      <li>📈 I also plan to grow into a <strong>Google Developer Expert (GDE)</strong> in AI/ML or Google Cloud, by consistently contributing to the community and publishing innovative AI tools.</li>
+      <li><b>Languages:</b> Python, SQL</li>
+      <li><b>AI Agent Frameworks:</b> Google ADK, Agent Builder, A2A Orchestration</li>
+      <li><b>Cloud & AI Tools:</b> Vertex AI, Gemini API/CLI, Google AI Studio</li>
+      <li><b>Platforms:</b> GitHub, VS Code, Jupyter Notebook, Render</li>
+      <li><b>AI-Assisted Coding:</b> Gemini Code Assist, ChatGPT, GitHub Copilot</li>
+      <li><b>Soft Skills:</b> Problem-Solving, Critical Thinking, Collaboration</li>
     </ul>
   </section>
 
   <section id="projects">
-    <h2>📂 Projects</h2>
+    <h2>📂 Featured Projects</h2>
     <ul>
-      <li><strong>💬 Asha AI Chatbot</strong> – Conversational Assistant for Women in Tech (React, JS, Bootstrap, GitHub + Render)</li>
-      <li><strong>🚀 PalAI</strong> – Your Personal AI Learning Assistant (Flask, Gemini API, JavaScript, HTML/CSS)</li>
-      <li><strong>🎨 Creative Portfolio Website</strong> – (React.js, Tailwind CSS, GitHub Pages)</li>
-      <li><strong>🌐 SheCodesHerWay</strong> – Inclusive Tech Platform for Women (React + Python + Firebase)</li>
-    </ul>
-  </section>
-
-  <section id="experience">
-    <h2>🧠 Experience</h2>
-    <ul>
-      <li>🌍 Contributor – SSoC4’25 (Script Summer of Code) | Mar 2025 – Present</li>
-      <li>🧑‍🏫 Mentor – Topmate.io | Jan 2025 – Present</li>
-      <li>🧑‍💻 Freelance Developer – Upwork | Apr 2025 – Present</li>
-      <li>🏫 Trainee – Infosys Springboard Pragati (AI Track) | Jan 2025 – Present</li>
-      <li>✍️ Technical Writer – Medium | May 2024 – Present</li>
-      <li>👩‍💼 Founder – Simplified Computer Science</li>
+      <li><b>🌱 SproutGrowAgent</b> – Multimodal AI Agent for Farmers (Vertex AI, Gemini Pro, Firebase, React)</li>
+      <li><b>✈️ WanderWise AI</b> – Agentic AI Travel Assistant (Gemini Pro, Agent Builder, BigQuery, EMT API)</li>
+      <li><b>📚 PalAI</b> – Personal AI Learning Assistant (Python, Flask, Gemini API)</li>
+      <li><b>🌐 SheCodesHerWay</b> – Inclusive Tech Platform for Women (React, Firebase, Python)</li>
     </ul>
   </section>
 
   <section id="achievements">
     <h2>🏆 Achievements</h2>
     <ul>
-      <li>🎮 Arcade Legend – Google Cloud Facilitator Program (Diamond League)</li>
-      <li>🌍 Open Source Contributor – SSoC4’25</li>
+      <li>Google Cloud Arcade Legend – Diamond League 🏅</li>
+      <li>Contributor @ GSSoC ’25 (GirlScript Summer of Code)</li>
+      <li>SproutGrowAgent shortlisted @ Google Cloud Agentic AI Day 2025</li>
+      <li>Infosys Springboard Pragati – AI Track Graduate</li>
+      <li>Completed Google Gen AI Exchange Program 2025</li>
+      <li>Attended Google Cloud AI Labs – Hands-on Agent Development Workshop</li>
     </ul>
   </section>
 
   <section id="certifications">
     <h2>📜 Certifications</h2>
     <ul>
-      <li>Developing with GitHub Copilot and VS Code – Microsoft</li>
-      <li>Introduction to Git and GitHub – Google</li>
+      <li>Artificial Intelligence Foundation – Infosys Springboard</li>
+      <li>AI-first Software Engineering – Infosys Springboard</li>
       <li>Python for Data Science, AI & Development – IBM</li>
-      <li>Artificial Intelligence Fundamentals – IBM</li>
-      <li>AI for Everyone – DeepLearning.AI</li>
-      <li>Gen AI Academy Certificate – Hack2Skill</li>
-      <li>AI Foundation – Infosys Springboard</li>
-      <li>IBM Full Stack Developer Certificate – In Progress</li>
-      <li>Google Project Management – In Progress</li>
+      <li>Data Structures & Algorithms in Python – Infosys Springboard</li>
+      <li>IBM Solving Problems with Creative & Critical Thinking</li>
     </ul>
   </section>
 
@@ -209,13 +182,22 @@
     <h2>🎓 Education</h2>
     <ul>
       <li>MCA – Master of Computer Applications | Berhampur University – 74%</li>
-      <li>BA – Mathematics Hons | Khallikote Unitary University, Brahmapur</li>
+      <li>B.A. Mathematics (Hons) | Khalikote (Auto) College – 60%</li>
     </ul>
   </section>
 
+  <section id="contact">
+    <h2>🤝 Contact</h2>
+    <p>📧 Email: <a href="mailto:preranapattnaik4@gmail.com">preranapattnaik4@gmail.com</a></p>
+    <p>💼 LinkedIn: <a href="https://www.linkedin.com/in/prerana-pattnaik/" target="_blank">linkedin.com/in/prerana-pattnaik</a></p>
+    <p>💻 GitHub: <a href="https://github.com/PreranaPattnaik4" target="_blank">github.com/PreranaPattnaik4</a></p>
+    <p>🌐 Website: <a href="https://simplifiedcomputerscience.com" target="_blank">simplifiedcomputerscience.com</a></p>
+    <p>📱 Mobile: +91 8073218535</p>
+  </section>
+
   <footer>
-    <p>📧 prerana.pattnaik@gmail.com | 🌐 simplifiedcomputerscience.com</p>
-    <p>"Bringing imagination to life through code, one AI tool at a time."</p>
+    <p>📧 prerana.pattnaik4@gmail.com | 🌐 simplifiedcomputerscience.com</p>
+    <p>"Building AI tools with purpose, collaboration, and impact."</p>
   </footer>
 
   <button id="backToTop" onclick="window.scrollTo({top: 0, behavior: 'smooth'});">⬆ Back to Top</button>
